# rust-json-file-store

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl
.github/workflows/: continuous_integration.yaml
src/: file_store.rs  json_store.rs  lib.rs  memory_store.rs
tests/: lib.rs
