[package]
name = "jfs"
version = "0.9.0"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/flosse/rust-json-file-store"
repository = "https://github.com/flosse/rust-json-file-store"
documentation = "https://docs.rs/crate/jfs/"
description = "A JSON file store"
readme = "README.md"
keywords = ["json", "file", "store", "db", "database"]
categories = ["database"]
edition = "2021"

[dependencies]
fs2 = "0.4"
log = "0.4"
parking_lot = "0.12.1"
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = { version = "1" }
tempfile = "3.4.0"

[badges]
maintenance = { status = "actively-developed" }
