[package]
name = "jfs"
version = "0.9.0"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/flosse/rust-json-file-store"
repository = "https://github.com/flosse/rust-json-file-store"
documentation = "https://docs.rs/crate/jfs/"
description = "A JSON file store"
readme = "README.md"
keywords = ["json", "file", "store", "db", "database"]
categories = ["database"]
edition = "2021"

[dependencies]
fs2 = "0.4"
log = "0.4"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
tempfile = "3.15"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"
